DevPro.Api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devpro-service
spec:
  selector:
    app: devpro
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
