DevPro.Api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devpro-ingress
  annotations:
spec:
  rules:
  - host: devops.microwe.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devpro-service
            port:
              number: 80
